# Tanshuku

./: Cargo.toml  LICENSE  README.md  schema.sql
assets/static/: index.css  index.html  index.js
src/: main.rs
src/app/: api.rs  config.rs  error.rs  mod.rs  model.rs  utils.rs
static/: index.html
