[package]
name = "tanshuku"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
base62 = "2.2.4"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.1", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }
