[package]
name = "tanshuku"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
dotenvy = "0.15.7"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
url = { version = "2.5.8", features = ["serde"] }
